--- a/src/database-api-client/database-api-client.csproj
+++ b/src/database-api-client/database-api-client.csproj
@@ -48,6 +48,7 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Training\TrainingStatus.cs" />
     <Compile Include="Units\Unit.cs" />
+    <Compile Include="Units\UnitStatusType.cs" />
     <Compile Include="Units\UnitMembership.cs" />
   </ItemGroup>
   <ItemGroup>
