--- a/src/web-api-common/packages.config
+++ b/src/web-api-common/packages.config
@@ -8,7 +8,7 @@
   <package id="Microsoft.AspNet.WebApi.Cors" version="5.2.3" targetFramework="net461" />
   <package id="Microsoft.AspNet.WebApi.Owin" version="5.2.3" targetFramework="net461" />
   <package id="Microsoft.AspNet.WebApi.WebHost" version="5.2.3" targetFramework="net461" />
-  <package id="Microsoft.IdentityModel.Protocol.Extensions" version="1.0.0" targetFramework="net461" />
+  <package id="Microsoft.IdentityModel.Protocol.Extensions" version="1.0.2.206221351" targetFramework="net461" />
   <package id="Microsoft.Owin" version="3.0.1" targetFramework="net461" />
   <package id="Microsoft.Owin.Security" version="3.0.1" targetFramework="net461" />
   <package id="Microsoft.Owin.Security.OpenIdConnect" version="3.0.1" targetFramework="net461" />
@@ -23,6 +23,6 @@
   <package id="Ninject.Web.WebApi" version="3.2.4.0" targetFramework="net461" />
   <package id="Ninject.Web.WebApi.OwinHost" version="3.2.4.0" targetFramework="net461" />
   <package id="Owin" version="1.0" targetFramework="net461" />
-  <package id="System.IdentityModel.Tokens.Jwt" version="4.0.0" targetFramework="net461" />
-  <package id="WebActivatorEx" version="2.0" targetFramework="net461" />
+  <package id="System.IdentityModel.Tokens.Jwt" version="4.0.2.206221351" targetFramework="net461" />
+  <package id="WebActivatorEx" version="2.1.0" targetFramework="net461" />
 </packages>
