--- a/src/database-api-client/database-api-client.csproj
+++ b/src/database-api-client/database-api-client.csproj
@@ -43,6 +43,7 @@
   <ItemGroup>
     <Compile Include="Model\Enums.cs" />
     <Compile Include="Model\EventSummary.cs" />
+    <Compile Include="Model\IId.cs" />
     <Compile Include="Model\ListPermissionWrapper.cs" />
     <Compile Include="Model\Members\MemberInfo.cs" />
     <Compile Include="Model\Members\MemberSummary.cs" />
