model error exception

--- a/src/sar-common/sar-common.csproj
+++ b/src/sar-common/sar-common.csproj
@@ -42,6 +42,7 @@
   <ItemGroup>
     <Compile Include="Exceptions\AuthorizationException.cs" />
     <Compile Include="Exceptions\DuplicateItemException.cs" />
+    <Compile Include="Exceptions\ModelErrorException.cs" />
     <Compile Include="Exceptions\MultipleMatchesException.cs" />
     <Compile Include="Exceptions\NotFoundException.cs" />
     <Compile Include="Exceptions\UserErrorException.cs" />
