--- a/src/sar-common/sar-common.csproj
+++ b/src/sar-common/sar-common.csproj
@@ -40,6 +40,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="EncryptionService.cs" />
     <Compile Include="Exceptions\AuthorizationException.cs" />
     <Compile Include="Exceptions\DuplicateItemException.cs" />
     <Compile Include="Exceptions\ModelErrorException.cs" />
