--- a/src/database-api-client/database-api-client.csproj
+++ b/src/database-api-client/database-api-client.csproj
@@ -57,6 +57,7 @@
     <Compile Include="Model\Search\MemberSearchResult.cs" />
     <Compile Include="Model\Search\SearchResponse.cs" />
     <Compile Include="Model\Search\SearchResult.cs" />
+    <Compile Include="Model\Training\TrainingCourse.cs" />
     <Compile Include="Model\Training\TrainingRecord.cs" />
     <Compile Include="Model\Training\TrainingStatus.cs" />
     <Compile Include="Model\Units\Unit.cs" />
