--- a/src/database-api-client/database-api-client.csproj
+++ b/src/database-api-client/database-api-client.csproj
@@ -44,6 +44,8 @@
     <Compile Include="Model\Accounts\Account.cs" />
     <Compile Include="Model\Accounts\PasswordResetRequest.cs" />
     <Compile Include="Model\Accounts\Role.cs" />
+    <Compile Include="Model\Animals\Animal.cs" />
+    <Compile Include="Model\Animals\AnimalOwner.cs" />
     <Compile Include="Model\Enums.cs" />
     <Compile Include="Model\EventSummary.cs" />
     <Compile Include="Model\IId.cs" />
