domain model for member address

--- a/src/database-api-client/database-api-client.csproj
+++ b/src/database-api-client/database-api-client.csproj
@@ -41,6 +41,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Model\Address.cs" />
     <Compile Include="Model\Accounts\Account.cs" />
     <Compile Include="Model\Accounts\PasswordResetRequest.cs" />
     <Compile Include="Model\Accounts\Role.cs" />
@@ -52,6 +53,7 @@
     <Compile Include="Model\EventSummary.cs" />
     <Compile Include="Model\IId.cs" />
     <Compile Include="Model\ListPermissionWrapper.cs" />
+    <Compile Include="Model\Members\MemberAddress.cs" />
     <Compile Include="Model\Members\MemberInfo.cs" />
     <Compile Include="Model\Members\MemberSummary.cs" />
     <Compile Include="Model\Members\ProvisionMemberInfo.cs" />
@@ -69,7 +71,6 @@
     <Compile Include="Model\Units\UnitStatusType.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
-  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
